--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ember-data": "1.13.7",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
-    "ember-localstorage-adapter": "0.5.4"
+    "ember-localstorage-adapter": "0.5.4",
+    "emberx-select": "2.0.1"
   }
 }
